# enaml_coverage_plugin

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  README.md  README.rst  pyproject.toml  releasenotes.rst  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
enaml_coverage_plugin/: __init__.py  parser.py  plugin.py  reporter.py
tests/: plugin_test.py  test_simple.py
tests/data/: __init__.py  test_simple.enaml
tests/enaml/: test_simple.enaml
