[metadata]
name = enaml_coverage_plugin
author = Matthieu C. Dartiailh
author_email = m.dartiailh@gmail.com
description = Coverage plugin for enaml
url = https://github.com/MatthieuDartiailh/enaml_coverage_plugin
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
classifiers =
    Development Status :: 3 - Alpha,
    License :: OSI Approved :: BSD License,
    Natural Language :: English,
    Operating System :: OS Independent,
    Programming Language :: Python
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,

[options]
packages = find:
zip_safe = False
python_requires = >=3.7
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
install_requires =
    coverage
    enaml
use_2to3 = False

[options.packages.find]
exclude =
    tests

[options.package_data]
* = *.enaml

[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    *.pyi,
ignore = E203, E266, E501, W503, E731
# line length is intentionally set to 80 here because qfox_server uses Bugbear
# See https://github.com/psf/black/blob/master/README.md#line-length for more details
max-line-length = 80
max-complexity = 28
select = B,C,E,F,W,T4,B9

[mypy]
follow_imports = normal
strict_optional = True

[mypy-enaml.*]
ignore_missing_imports = True

[isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[bdist_wheel]
universal=1
